--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #d4e4e2; /* Mesmo bg do Tailwind (#D4E4E2) */
-  padding: 24px 0;          /* Equivale ao py-6 (6 * 4px = 24px) */
+  background-color: #375676; /* Mesmo bg do Tailwind (#D4E4E2) */
+  padding: 0;          /* Equivale ao py-6 (6 * 4px = 24px) */
   margin-top: auto;
 }
 
@@ -12,6 +12,6 @@
 }
 
 .footer-text {
-  color: #2c4c6d;           /* Mesmo text color */
+  color: #ffffff;           /* Mesmo text color */
   font-size: 0.875rem;      /* text-sm (14px) */
 }
