--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,14 +4,20 @@
 
 html, body, #root {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
+
 #root {
+  min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
+
 
 main {
   flex: 1;
