--- a/frontend/src/components/Cards/AcessoCard.css
+++ b/frontend/src/components/Cards/AcessoCard.css
@@ -1,5 +1,5 @@
 .acesso-card {
-  background-color: #97b7d9f2;
+  background-color: #c9d2df;
   border-radius: 12px;
   padding: 32px;
   display: flex;
@@ -17,7 +17,7 @@
 }
 
 .acesso-card-title {
-  color: #ffffff;
+  color: #233e83;
   font-weight: 600;
   font-size: 1.125rem;
   text-align: center;
