--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,32 +1,36 @@
 .header {
-  background-color: #375676;
-  padding: 8px 24px;
+  background-color: #f6f7f8;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-  width: 96.8%;
+  width: 100%;
   position: relative;
   z-index: 10;
+  box-sizing: border-box;
 }
 
+
 .header-container {
-  margin: 0;
-  max-width: none;
-  width: 95%;
+  padding: 8px 24px;
+  margin: 0 auto;
+  max-width: 1370px; /* ou o limite do seu layout */
+  width: 90%;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 }
+
 
 .header-logo {
   display: flex;
   align-items: center;
   gap: 8px;
-  color: #c7bfbf;
+  color: #233e83;
   text-decoration: none;
   transition: opacity 0.3s ease;
 }
 
 .header-logo:hover {
-  color: #a9a3a3;
+  color: #2b3f71;
   opacity: 0.8;
 }
 
@@ -90,7 +94,7 @@
   height: 100vh;
   width: 70%;
   max-width: 280px;
-  background-color: #9dbfbb;
+  background-color: #3d6a96;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -126,25 +130,26 @@
 }
 
 .nav-link {
-  color: #c7bfbf;
+  color: #12204e;
   font-weight: 500;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .nav-link:hover {
-  color: #568f3a;
+  color: #12204e;
 }
 
 .nav-active {
-  color: #568f3a;
+  color: #12204e;
   font-weight: 600;
+  text-decoration: underline;
 }
 
 .button-access {
-  background-color: #d48d28;
+  background-color: #233e83;
   color: white;
-  padding: 8px 24px;
+  padding: 8px 16px;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -154,8 +159,8 @@
 }
 
 .button-access:hover {
-  color: #062f5a;
-  background-color: #b87720;
+  color: #ffffff;
+  background-color: #1d305f;
 }
 
 .user-info {
