--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,19 +58,25 @@ button:focus-visible {
 }
 
 * {
-  box-sizing:content-box;
+   box-sizing: border-box;
 }
 
 html, body, #root {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
+
 #root {
+  min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
+
 
 main {
   flex: 1;
