--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #97b7d9f2;
+  background-color: #f6f7f8;
   position: relative;
 }
 
@@ -13,7 +13,7 @@
 }
 
 .back-button {
-  background-color: #d48d28;
+  background-color: #1d2e81;
   color: white;
   padding: 12px 24px;
   border-radius: 8px;
@@ -23,7 +23,7 @@
 }
 
 .back-button:hover {
-  background-color: #b87720;
+  background-color: #131f5a;
 }
 
 .login-main {
@@ -43,12 +43,12 @@
 .login-wrapper h2 {
   font-size: 36px;
   font-weight: bold;
-  color: #568f3a;
+  color: #2c4c6d;
   margin-bottom: 48px;
 }
 
 .login-form-container {
-  background-color: #3d6a96;
+  background-color: #c9d2df;
   padding: 32px;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0,0,0,0.15);
@@ -64,7 +64,7 @@
   display: block;
   text-align: left;
   font-weight: 600;
-  color: #ffffff;
+  color: #114186;
   margin-bottom: 8px;
 }
 
@@ -72,15 +72,15 @@
   width: 93%;
   padding: 16px;
   border-radius: 8px;
-  border: 2px solid #7893b8;
-  background-color: #97b7d9f2;
+  border: 2px solid #b2bdd6;
+  background-color: #fffffff2;
   color: #2c4c6d;
   font-size: 16px;
 }
 
 .login-form input:focus {
   outline: none;
-  border-color: #568f3a;
+  border-color: #3a528f;
 }
 
 .forgot-password {
@@ -88,18 +88,18 @@
 }
 
 .forgot-link {
-  color: #ffffff;
+  color: #114186;
   text-decoration: underline;
   font-size: 14px;
 }
 
 .forgot-link:hover {
-  color: #d3d3d3;
+  color: #072857;
 }
 
 .submit-button {
   width: 30%;
-  background-color: #d48d28;
+  background-color: #1d2e81;
   color: white;
   padding: 16px;
   border-radius: 12px;
@@ -113,7 +113,7 @@
 }
 
 .submit-button:hover {
-  background-color: #b87720;
+  background-color: #172467;
 }
 
 .divider {
@@ -135,12 +135,12 @@
 }
 
 .divider span {
-  background-color: #3d6a96;
+  background-color: #c9d2df;
   padding: 0 16px;
   position: relative;
   z-index: 1;
   font-weight: 600;
-  color: #ffffff;
+  color: #2d4887;
 }
 
 .social-buttons {
@@ -182,11 +182,11 @@
 .create-account {
   margin-top: 32px;
   font-size: 16px;
-  color: #ffffff;
+  color: #1d2e81;
 }
 
 .create-account-button {
-  background-color: #d48d28;
+  background-color: #04125a;
   color: white;
   padding: 8px 16px;
   border-radius: 8px;
@@ -197,5 +197,5 @@
 }
 
 .create-account-button:hover {
-  background-color: #b87720;
+  background-color: #16215b;
 }
