--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -94,7 +94,7 @@
   height: 100vh;
   width: 70%;
   max-width: 280px;
-  background-color: #3d6a96;
+  background-color: #c9d2df;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
